fix(content-uploader): add text ellipsis and adjust spacing

--- a/src/elements/content-uploader/ItemName.scss
+++ b/src/elements/content-uploader/ItemName.scss
@@ -1,7 +1,7 @@
 @import '../common/variables';
 
 .bcu-item-label {
-    max-width: 300px;
+    width: 100%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
